# STN_Core

./: .gitignore  README-ja.md  README.md  pyproject.toml  spec.md  stn_core_spec_v01_ja_r3.md
src/stn_core/: __init__.py  chunk_utils.py  document.py  environment.py  errors.py  evaluator.py  funcdef.py  getter.py  model.py  reader.py  repl.py  setter.py  sobject.py  system_funcs.py  typedef.py  units.py  values.py
tests/: test_chunk_utils.py  test_cli.py  test_document_get.py  test_environment.py  test_evaluator.py  test_functions.py  test_getter.py  test_integration.py  test_model.py  test_reader.py  test_repl.py  test_reserved.py  test_setter.py  test_symbols.py  test_type_extension.py  test_typedef.py  test_typification.py  test_units.py  test_variables.py
